SERVER-48884 Test Proctor Initializer has incorrect prereqs